--- a/CenaPlus.Client/Remote/Home.xaml
+++ b/CenaPlus.Client/Remote/Home.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CenaPlus.Client.Remote.Profile"
+﻿<UserControl x:Class="CenaPlus.Client.Remote.Home"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,8 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <ScrollViewer>
-            <StackPanel MinWidth="200">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="6"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <ScrollViewer Margin="{StaticResource SplitLeft}" Width="150">
+            <StackPanel>
+                <TextBlock Text="Profile" Style="{StaticResource Heading2}" />
                 <Image Height="100" Width="100" HorizontalAlignment="Left" Source="https://www.gravatar.com/avatar/159c4a0a78d0980aca8df9d781d1c755?d\=https://www.SmartOJ.com/img/Non_Avatar.png&amp;s\=100"/>
                 <TextBlock Text="Gasai Yuno" Width="100" HorizontalAlignment="Left" TextAlignment="Center"></TextBlock>
                 <TextBlock Text="User ID: 1" Margin="0,10,0,0"></TextBlock>
@@ -18,5 +25,10 @@
                 <TextBlock Text="Nation: China"></TextBlock>
             </StackPanel>
         </ScrollViewer>
+        <GridSplitter Grid.Column="1" />
+        <Grid Grid.Column="2" Margin="{StaticResource SplitRight}">
+            <TextBlock Text="Server circulars" Style="{StaticResource Heading2}" />
+            <RichTextBox Margin="0,30,0,0" IsReadOnly="True"></RichTextBox>
+        </Grid>
     </Grid>
 </UserControl>
