--- a/CenaPlus.Server/ServerMode/ServerSettings/Circulars.xaml
+++ b/CenaPlus.Server/ServerMode/ServerSettings/Circulars.xaml
@@ -7,11 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
-        <ScrollViewer>
-            <StackPanel MinWidth="200">
-                <TextBlock Text="BASIC PAGE" Style="{StaticResource Heading2}" />
-                <TextBlock Text="Content goes here" />
-            </StackPanel>
-        </ScrollViewer>
+
+        <TextBlock Text="Circulars" Style="{StaticResource Heading2}" />
+        <RichTextBox AcceptsReturn="True" Margin="0,30,0,30"></RichTextBox>
+        <Button Content="Save changes" Height="25" VerticalAlignment="Bottom"></Button>
     </Grid>
 </UserControl>
