--- a/CenaPlus.Server/ServerMode/Home.xaml
+++ b/CenaPlus.Server/ServerMode/Home.xaml
@@ -7,22 +7,41 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Style="{StaticResource ContentRoot}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <ScrollViewer>
-            <StackPanel MinWidth="200">
-                <TextBlock Text="Host name" Margin="0,0,0,5"></TextBlock>
-                <TextBox x:Name="HostnameTextBox" Margin="0,0,0,10" Text="Local Cena+ Server"></TextBox>
+            <StackPanel MinWidth="200" Margin="0,0,5,0">
+                <TextBlock Text="Host a new server" Style="{StaticResource Heading2}"/>
+                <TextBlock Text="Server name" Margin="0,0,0,5"></TextBlock>
+                <TextBox x:Name="txtServerName" Margin="0,0,0,10" Text="Cena+ Server1"></TextBox>
                 <TextBlock Text="Cena+ port" Margin="0,0,0,5"></TextBlock>
-                <TextBox x:Name="CenaPlusPortTextBox" Margin="0,0,0,10" Text="9999"></TextBox>
-                <TextBlock x:Name="MySQLPortTextBlock" Text="Database service port" Margin="0,0,0,5"></TextBlock>
-                <TextBox x:Name="MySQLPortTextBox" Margin="0,0,0,10" Text="3311"></TextBox>
-                <TextBlock x:Name="AccessTokenTextBlock" Margin="0,0,0,5" Text="Access token"></TextBlock>
-                <TextBox x:Name="AccesTokenTextBox" Margin="0,0,0,10"></TextBox>
-                <ComboBox x:Name="ModeComboBox" SelectedIndex="0" Margin="0,0,0,10" SelectionChanged="ModeComboBox_SelectionChanged">
-                    <ListBoxItem Content="Full-service"/>
-                    <ListBoxItem Content="private judge node"/>
-                    <ListBoxItem Content="Shared judge node"/>
+                <TextBox x:Name="txtLocalPort" Margin="0,0,0,10" Text="9980"></TextBox>
+                <TextBlock Text="MySQL Mode" Margin="0,0,0,5"></TextBlock>
+                <ComboBox x:Name="lstMySqlMode" Margin="0,0,0,10" SelectionChanged="lstMySqlMode_SelectionChanged">
+                    <ListBoxItem Content="Embedded"/>
+                    <ListBoxItem Content="External"/>
                 </ComboBox>
-                <Button x:Name="btnTest" Click="btnTest_Click" Content="Click to start"/>
+                <TextBlock Name="lblMySQLAddr" Text="MySQL address" Margin="0,0,0,5" Visibility="Collapsed"></TextBlock>
+                <TextBox x:Name="txtMySQLAddr" Margin="0,0,0,10" Text="localhost" Visibility="Collapsed"></TextBox>
+                <TextBlock Name="lblMySQLPort" Text="MySQL port" Margin="0,0,0,5" Visibility="Collapsed"></TextBlock>
+                <TextBox x:Name="txtMySQLPort" Margin="0,0,0,10" Text="3306" Visibility="Collapsed"></TextBox>
+                <Button x:Name="btnStartLocal" Content="Start" Click="btnStartLocal_Click"/>
+            </StackPanel>
+        </ScrollViewer>
+        <ScrollViewer Grid.Column="1">
+            <StackPanel MinWidth="200" Margin="5,0,0,0">
+                <TextBlock Text="Connect to an existing server" Style="{StaticResource Heading2}"/>
+                <TextBlock Text="Address" Margin="0,0,0,5"></TextBlock>
+                <TextBox Name="txtAddr"  Margin="0,0,0,10" Text="localhost"></TextBox>
+                <TextBlock Text="Port" Margin="0,0,0,5"></TextBlock>
+                <TextBox Name="txtRemotePort" Margin="0,0,0,10" Text="9980"></TextBox>
+                <TextBlock Text="Manager Account" Margin="0,0,0,5"></TextBlock>
+                <TextBox Name="txtAccount" Margin="0,0,0,10"></TextBox>
+                <TextBlock Margin="0,0,0,5" Text="Password"></TextBlock>
+                <PasswordBox Name="txtPassword" Margin="0,0,0,10"/>
+                <Button Name="btnConnect" Content="Connect" Click="btnConnect_Click"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
