--- a/CenaPlus.Server/MainWindow.xaml
+++ b/CenaPlus.Server/MainWindow.xaml
@@ -8,7 +8,12 @@
     <mui:ModernWindow.MenuLinkGroups>
         <mui:LinkGroup DisplayName="Cena+ server">
             <mui:LinkGroup.Links>
-                <mui:Link DisplayName="Main" Source="/ServerMode/Home.xaml" />
+                <mui:Link DisplayName="Server Mode" Source="/ServerMode/Home.xaml" />
+                <mui:Link DisplayName="Judge Mode" Source="/JudgeMode/Home.xaml"/>
+            </mui:LinkGroup.Links>
+        </mui:LinkGroup>
+        <mui:LinkGroup DisplayName="Cena+ server" GroupName="ServerMode">
+            <mui:LinkGroup.Links>
                 <mui:Link DisplayName="Online Users" Source="/ServerMode/Online.xaml" />
                 <mui:Link DisplayName="Server Settings" Source="/ServerMode/ServerSettings/ServerSettings.xaml" />
                 <mui:Link DisplayName="Users Manage" Source="/ServerMode/Users.xaml" />
@@ -16,7 +21,7 @@
                 <mui:Link DisplayName="Problems Manage" Source="/ServerMode/Problems.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
-        <mui:LinkGroup DisplayName="Judge node" GroupName="JudgeNode">
+        <mui:LinkGroup DisplayName="Cena+ Judge Node" GroupName="JudgeMode">
             <mui:LinkGroup.Links>
                 <mui:Link DisplayName="Status" Source="/JudgeNode/Status.xaml" />
             </mui:LinkGroup.Links>
